# SmartBatteryScheduler

./: .dockerignore  .gitignore  .replit  Dockerfile  Pasted-File-home-runner-workspace-main-py-line-127-in-module-main-File-home-runner-workspa-1731596268494.txt  Pasted-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-scriptrunner-1731596231488.txt  README.md  battery_profiles.json  docker-compose.yml  main.py  pyproject.toml  replit.nix  schedules.json  setup.py
.streamlit/: config.toml
components/: battery_config.py  battery_status.py  cost_calculator.py  historical_analysis.py  manual_battery_control.py  power_flow.py  price_chart.py
dynamicbalancing/: __init__.py  battery.py  optimizer.py  price.py  price_data.py  profiles.py  weather.py
src/backend/: __init__.py  app.py  object_store.py
src/core/: __init__.py  battery.py  client.py  const.py  ecactus_client.py  ecactus_stub.py  object_store.py  optimize_result.py  optimizer.py  price_data.py  profiles.py
src/examples/: example.py  strategy.py
src/frontend/: __init__.py  app.py  formatting.py  main.py  translations.py
src/frontend/components/: battery_config.py  battery_status.py  cost_calculator.py  energy_consumption.py  historical_analysis.py  manual_battery_control.py  price_chart.py
utils/: battery.py  battery_profiles.py  ecactus_client.py  ecactus_ecos_stub.py  ecactus_stub.py  formatting.py  historical_data.py  object_store.py  optimizer.py  price_data.py  translations.py  weather_service.py
