[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ephem>=4.1.6",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=11.0.0",
    "plotly>=5.13.0",
    "psycopg2-binary>=2.9.10",
    "pvlib>=0.11.1",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.1",
    "pytz>=2023.3",
    "requests<=2.32.3",
    "scipy",
    "streamlit-echarts>=0.4.0",
    "streamlit>=1.24.0",
    "timezonefinder>=6.5.4",
]
