[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecactus-ecos-client""
version = "0.2.0"
description = "A library for eCactus Ecos battery energy optimization and scheduling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sierk Hoeksma", email = "sjhoeksma@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
    "streamlit>=1.8.0",
    "pytz>=2024.1",
    "aiohttp>=3.7.4",
    "asyncio>=3.4.3",
    "yarl=>1.5",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.8.0",
    "plotly>=5.0.0",
]
backend = [
    "streamlit>=1.8.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "pytest-aiohttp>=3.7.4",
    "wheel",
    "twine",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "frontend", "backend"]

[tool.setuptools.package-data]
frontend = ["*.py"]
backend = ["*.py"]
core = ["*.py"]
